--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="control">Control</string>
+    <string name="graph">Graph</string>
+    <string name="warning_tan_so">Tần số phải <![CDATA[<= 60hz]]></string>
+    <string name="report">Report</string>
 </resources>
